fix: overflow issue of chain selector modal

--- a/src/ui/component/ChainSelector/style.less
+++ b/src/ui/component/ChainSelector/style.less
@@ -32,7 +32,7 @@
 }
 
 .chain-selector-options {
-  width: 400px;
+  width: 100%;
   max-height: 376px;
   display: flex;
   flex-wrap: wrap;
